fix(swagger): bug fixes and adding swagger spec for activity
n
